2009-03-10  Martin Leidig  <mleidig@schlund.de>

	Added Live-Jars support.

	Modified:
	* src/de/schlund/pfixxml/resources/ModuleResourceProvider.java: Use
	ModuleSourceLocator for looking up source or unpacked module directory

	Added:
	* src/de/schlund/pfixcore/util/LiveJarInfo.java: Reads information
	about configured live jars
	* src/de/schlund/pfixxml/resources/ModuleSourceResource.java:
	ModuleResource implemtation for file system
	* src/de/schlund/pfixxml/resources/ModuleSourceLocatorRegistry.java:
	registry for ModuleResourceLocators
	* src/de/schlund/pfixxml/resources/ModuleSourceLocator.java: interface
	for locators providing source file access for modules

2009-03-08  Martin Leidig  <mleidig@schlund.de>

	Fixed include error handling. Log detected modules.

	* src/de/schlund/pfixcore/util/ModuleInfo.java
	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/util/XsltResourceNotFoundException.java

2009-03-06  Martin Leidig  <mleidig@schlund.de>

	Improved error handling when included resource can't be found.

	* src/de/schlund/pfixxml/resources/ModuleResource.java
	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/util/XsltResourceNotFoundException.java

2009-03-04  Martin Leidig  <mleidig@schlund.de>

	Fixed resolving of XSLT includes from modules.

	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/resources/ModuleResource.java
	* projects/core/build/create_depend.xsl

2009-03-02  Martin Leidig  <mleidig@schlund.de>

	Fixed null value for SPDocument creation time if redirect is done
	before the page is delivered (by remembering the creation time in the
	SPDocument).

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java
	* src/de/schlund/pfixxml/SPDocument.java

2009-03-03  Martin Leidig  <mleidig@schlund.de>

	Return 404 instead of Exception if there's no pagerequest configuration 
	and no target for page name.

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java