@@ -1,3 +1,9 @@
+2009-03-11  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/context/SessionContextImpl.java:
+	catch all exceptions thrown in SessionStatusListeners to ensure that
+	SessionAdmin.valueUnbound is called to remove session
+
 2009-03-10  Martin Leidig  <mleidig@schlund.de>
 
 	Added Live-Jars support.
